--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,14 @@
   "compilerOptions": {
     "noImplicitAny": false,
     "target": "es5",
-    "module": "esnext",
-    "strict": true,
-    "moduleResolution": "node"
-  }
+    "module": "umd",
+    "rootDir": "src",
+    "outDir": "out",
+    "declaration": true,
+    "strict": true
+  },
+  "exclude": [
+    "src/BrightScriptLexer.spec.ts",
+    "node_modules"
+  ]
 }
