--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         "**/.DS_Store": true,
         "**/node_modules": true,
         "**/coverage": true
-    }
+    },
+    "window.title": "BRS Parser - ${activeEditorShort}${separator}${appName}"
 }
