--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
   "compilerOptions": {
     "noImplicitAny": false,
     "target": "es5",
-    "module": "umd",
+    "module": "commonjs",
     "rootDir": "src",
-    "outDir": "out",
+    "outDir": "dist",
     "declaration": true,
     "strict": true
   },
