--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "compile": "rimraf dist && tsc",
     "prepublishOnly": "npm run compile",
-    "test": "karma start"
+    "test": "nyc mocha src/**/*.spec.ts --compilers ts-node/register --require source-map-support/register --full-trace --bail",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -19,14 +20,33 @@
     "url": "https://github.com/TwitchBronBron/brightscript-parser/issues"
   },
   "homepage": "https://github.com/TwitchBronBron/brightscript-parser#readme",
+  "nyc": {
+    "include": [
+      "src/**/!(*.spec).ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [
+      "text-summary",
+      "html"
+    ],
+    "sourceMap": true,
+    "instrument": true
+  },
   "devDependencies": {
+    "@types/chai": "^4.1.2",
     "@types/jasmine": "^2.6.0",
-    "jasmine": "^2.8.0",
-    "jasmine-core": "^2.8.0",
-    "karma": "^1.7.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-typescript": "^3.0.7",
+    "@types/mocha": "^2.2.48",
+    "chai": "^4.0.2",
+    "coveralls": "^3.0.0",
+    "mocha": "^3.4.2",
+    "nyc": "^11.0.3",
+    "source-map-support": "^0.4.15",
+    "ts-node": "^3.1.0",
     "tslint": "^5.7.0",
     "typescript": "^2.5.2"
   }
