--- a/package.json
+++ b/package.json
@@ -39,15 +39,15 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.2",
-    "@types/jasmine": "^2.6.0",
     "@types/mocha": "^2.2.48",
-    "chai": "^4.0.2",
+    "chai": "^4.1.2",
     "coveralls": "^3.0.0",
-    "mocha": "^3.4.2",
-    "nyc": "^11.0.3",
-    "source-map-support": "^0.4.15",
-    "ts-node": "^3.1.0",
-    "tslint": "^5.7.0",
-    "typescript": "^2.5.2"
+    "mocha": "^5.0.4",
+    "nyc": "^11.6.0",
+    "rimraf": "^2.6.2",
+    "source-map-support": "^0.5.3",
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.2"
   }
 }
