--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,11 @@ language: node_js
 node_js:
   - "node"
 after_success: npm run coverage
+deploy:
+  provider: npm
+  email: "bronley@gmail.com"
+  api_key: $NPM_TOKEN
+  skip_cleanup: true
+  on:
+    branch: master
+    tags: true
