--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brightscript-parser",
-  "version": "1.0.2",
+  "version": "1.0.3-0",
   "description": "A parser for Roku's BrightScript language, written in JavaScript",
   "main": "dist/BrightScriptLexer.js",
   "types": "dist/BrightScriptLexer.d.ts",
