--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brightscript-parser",
-  "version": "1.0.3-1",
+  "version": "1.1.0",
   "description": "A parser for Roku's BrightScript language, written in JavaScript",
   "main": "dist/BrightScriptLexer.js",
   "types": "dist/BrightScriptLexer.d.ts",
@@ -49,7 +49,7 @@
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
     "mocha": "^5.0.4",
-    "nyc": "^11.6.0",
+    "nyc": "^13.1.0",
     "rimraf": "^2.6.2",
     "source-map-support": "^0.5.3",
     "ts-node": "^5.0.1",
