--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "build",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -11,13 +12,18 @@
             "problemMatcher": []
         },
         {
+            "label": "test",
+            "type": "shell",
+            "command": "npm",
+            "args": [
+                "run",
+                "test",
+                "--silent"
+            ],
             "group": {
                 "kind": "test",
                 "isDefault": true
-            },
-            "type": "npm",
-            "script": "test",
-            "problemMatcher": []
+            }
         }
     ]
 }
