--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,12 +9,28 @@
             },
             "type": "npm",
             "script": "compile",
-            "problemMatcher": []
+            "problemMatcher": [],
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": true
+            }
         },
         {
             "label": "test",
             "type": "shell",
             "command": "npm",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": true
+            },
             "args": [
                 "run",
                 "test",
