Fixed bug in lexer that was incorrectly matching newlines between things like `end for`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
     "declaration": true,
     "strict": true
   },
-  "exclude": [
-    "src/BrightScriptLexer.spec.ts",
-    "node_modules"
+  "include": [
+    "src/BrightScriptLexer.ts"
   ]
 }
