--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,14 @@
                 "kind": "test",
                 "isDefault": true
             },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": true
+            },
             "type": "npm",
             "script": "test",
             "problemMatcher": []
