--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
   - "node"
-after_success: npm run coverage
+after_success: npm run report-coverage
 deploy:
   provider: npm
   email: "bronley@gmail.com"
