--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 language: node_js
 node_js:
   - "node"
-after_success: npm run report-coverage
+before_script:
+  - npm install
+script:
+  - npm run build
+  - npm run test
+  - npm run lint
+after_success: npm run coverage
 deploy:
   provider: npm
   email: "bronley@gmail.com"
